--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,9 @@ framework = arduino
 monitor_speed = 9600
 lib_deps = z3t0/IRremote@^4.3.1
 
-[env:esp32]
-platform = espressif32
-board = esp32dev
+[env:NodeMCUv3]
+platform = espressif8266
+board = esp12e
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
 lib_deps = z3t0/IRremote@^4.3.1
