--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,17 @@ platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 9600
-lib_deps = z3t0/IRremote@^4.3.1
+lib_deps = 
+	z3t0/IRremote@^4.3.1
+	rfetick/MPU6050_light@^1.1.0
+	mikalhart/TinyGPSPlus@^1.0.3
 
 [env:NodeMCUv3]
 platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 9600
-lib_deps = z3t0/IRremote@^4.3.1
+lib_deps = 
+	z3t0/IRremote@^4.3.1
+	rfetick/MPU6050_light@^1.1.0
+	mikalhart/TinyGPSPlus@^1.0.3
